# remorex_python

./: .coverage  .gitignore  Procfile  README.md  build.sh  django.config.js  example.env  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  sqlite_connection.session.sql  tailwind.config.js
accounts/: forms.py  models.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_authentication.py
locale/de/LC_MESSAGES/: django.po
posts/: hetzner.md  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_overview_alter_post_thumbnail.py  0003_alter_post_thumbnail.py  0004_alter_post_slug.py
posts/templatetags/: markdown_extras.py
remorex/: asgi.py  mustand.json  settings.py  storage_backends.py  urls.py  wsgi.py
static/CACHE/: manifest.json
static/js/: htmx.min.js  script.js
static/src/: output.css
templates/: base.html  contact.html  home.html  language_selector.html
templates/posts/: post_detail.html  posts_list.html
templates/registration/: login.html  password_reset_form.html  signup.html
templates/yard/: assembly_groups.html  part_card.html  part_delete.html  part_detail.html  part_edit.html  parts_for_assemblygroup.html  query.html  query_success.html
yard/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
yard/migrations/: 0001_initial.py  0002_car_description.py  0003_part.py  0004_part_image.py  0005_assemblygroup_part_assembly_group.py
yard/tests/: test_model.py  test_views.py
(+16 files in other folders)
