[tool.poetry]
name = "remorex"
version = "0.1.0"
description = ""
authors = ["tarmo <tsillajoe@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
Brotli = "^1.0.9"
django = "^4.0.0"
django-allauth = "^0.51.0"
django-compressor = "^4.0"
django-phonenumbers = "^1.0.0"
django-phonenumber-field = "^7.0.0"
dj-database-url = "^1.0.0"
gunicorn = "^20.0.4"
Markdown = "^3.4.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
Pillow = "^9.3.0"
urllib3 = "^1.26"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
django-htmx = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
